--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid-container">
         <div class="player" id="player-1">
-            <input type="text" name="label" id="" placeholder="Player 1">
+            <input type="text" name="label" placeholder="Player 1">
             <div class="bars">
             </div>
             <div class="panel">
@@ -18,7 +18,7 @@
             <button>Add Bar</button>
         </div>
         <div class="player" id="player-2">
-            <input type="text" name="label" id="" placeholder="Player 2">
+            <input type="text" name="label" placeholder="Player 2">
 
             <p class="label"></p>
             <div class="bars">
@@ -28,7 +28,7 @@
             <button>Add Bar</button>
         </div>
         <div class="player" id="player-3">
-            <input type="text" name="label" id="" placeholder="Player 3">
+            <input type="text" name="label" placeholder="Player 3">
 
             <p class="label"></p>
             <div class="bars">
@@ -38,7 +38,7 @@
             <button>Add Bar</button>
         </div>
         <div class="player" id="player-4">
-            <input type="text" name="label" id="" placeholder="Player 4">
+            <input type="text" name="label" placeholder="Player 4">
 
             <p class="label"></p>
             <div class="bars">
@@ -48,7 +48,7 @@
             <button>Add Bar</button>
         </div>
         <div class="player" id="player-5">
-            <input type="text" name="label" id="" placeholder="Player 5">
+            <input type="text" name="label" placeholder="Player 5">
 
             <p class="label"></p>
             <div class="bars">
@@ -58,7 +58,7 @@
             <button>Add Bar</button>
         </div>
         <div class="player" id="player-6">
-            <input type="text" name="label" id="" placeholder="Player 6">
+            <input type="text" name="label" placeholder="Player 6">
 
             <p class="label"></p>
             <div class="bars">
