--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <title>Bars</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             </div>
             <div class="panel">
             </div>
-            <button>Add Bar</button>
+            <button class="add-bar">Add Bar</button>
         </div>
         <div class="player" id="player-2">
             <input type="text" name="label" placeholder="Player 2">
@@ -25,7 +26,7 @@
             </div>
             <div class="panel">
             </div>
-            <button>Add Bar</button>
+            <button class="add-bar">Add Bar</button>
         </div>
         <div class="player" id="player-3">
             <input type="text" name="label" placeholder="Player 3">
@@ -35,7 +36,7 @@
             </div>
             <div class="panel">
             </div>
-            <button>Add Bar</button>
+            <button class="add-bar">Add Bar</button>
         </div>
         <div class="player" id="player-4">
             <input type="text" name="label" placeholder="Player 4">
@@ -45,7 +46,7 @@
             </div>
             <div class="panel">
             </div>
-            <button>Add Bar</button>
+            <button class="add-bar">Add Bar</button>
         </div>
         <div class="player" id="player-5">
             <input type="text" name="label" placeholder="Player 5">
@@ -55,7 +56,7 @@
             </div>
             <div class="panel">
             </div>
-            <button>Add Bar</button>
+            <button class="add-bar">Add Bar</button>
         </div>
         <div class="player" id="player-6">
             <input type="text" name="label" placeholder="Player 6">
@@ -65,7 +66,7 @@
             </div>
             <div class="panel">
             </div>
-            <button>Add Bar</button>
+            <button class="add-bar">Add Bar</button>
         </div>
     </div>
     <script src="js/initialize.js"></script>
