Tiny color for color operations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+    <script type='text/javascript' src='js/tinycolor.js'></script>
     <title>Bars</title>
 </head>
 <body>
